[package]
name = "pcb-c"
version = "0.2.0"
authors = ["ubsan <npmazzuca@gmail.com>"]
description = "Pink Compiler Backend: Language agnostic compiler backend - C Library"
license = "MIT/Apache-2.0"
homepage = "https://github.com/ubsan/pcb"
repository = "https://github.com/ubsan/pcb"
build = "build.rs"

[lib]
name = "pcb_c"
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
pcb = "0.2.0"
pcb-llvm = "0.2.0"
libc = "0.2.7"

[build-dependencies]
rusty-cheddar = {path = "../../rusty-cheddar"}
