[package]
name = "pcb-core"
version = "0.2.0"
authors = ["ubsan <npmazzuca@gmail.com>"]
description = "Pink Compiler Backend: Language agnostic compiler backend - Core Library"
license = "MIT/Apache-2.0"
homepage = "https://github.com/ubsan/pcb"
repository = "https://github.com/ubsan/pcb"

[lib]
name = "pcb_core"
path = "src/lib.rs"

[dependencies]
typed-arena = "1.1.0"
