[package]
name = "pcb-llvm"
version = "0.2.0"
authors = ["ubsan <npmazzuca@gmail.com>"]
description = "Pink Compiler Backend: Language agnostic compiler backend - LLVM Backend"
license = "MIT/Apache-2.0"
homepage = "https://github.com/ubsan/pcb"
repository = "https://github.com/ubsan/pcb"

[lib]
name = "pcb_llvm"
path = "src/lib.rs"

[dependencies]
pcb-core = "0.1.3"
