[package]
name = "pcb"
version = "0.1.2"
authors = ["ubsan <npmazzuca@gmail.com>"]
description = "Pink Compiler Backend: Language agnostic compiler backend - Rust Library"
license = "MIT/Apache-2.0"
homepage = "https://github.com/ubsan/pcb"
repository = "https://github.com/ubsan/pcb"

[lib]
name = "pcb"
path = "src/lib.rs"

[dependencies]
pcb-core = "0.1.2"
